--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -29,4 +29,5 @@ qrcode = "0.14"
 image = { version = "0.25", default-features = false, features = ["png"] }
 aes-gcm = "0.10"
 rand = "0.8"
+actix-governor = "0.5"
 
